# mlops-team-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  app.py  cloudbuild.yaml  docker-compose.yaml  environment.yml  filelist.txt  main.py  mypy.ini  pyproject.toml  requirements-prev.txt  requirements.txt  requirements_dev.yml
.dvc/: config
.github/workflows/: ci.yml  cml_train.yml  codecheck.yaml  deploy-ui.yaml  docker-publish.yml  tests.yaml
configs/: config.yaml
configs/data/: diabetes_dataset.yaml
configs/model/: random_forest.yaml
data/raw/: diabetes.arff  diabetes.arff.dvc
debug_examples/: README.md  pdb_live_example.py
diabetes-predictor-ui/: README.md  model.joblib
diabetes_predictor/: __init__.py  predict_model.py  train_model.py
diabetes_predictor/data/: make_dataset.py
diabetes_predictor/models/: model.joblib  model.py  predict.py
diabetes_predictor_ui/: .gitattributes  requirements.txt
dockerfiles/: mlflow-ui.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: cloud_functions_fastapi.md  docker_to_gcp.md  interactive_ui.md  mkdocs.yaml
docs/source/: index.md
examples/: example_hydra_p1.txt  example_hydra_standard.txt  example_log.txt  example_profiling.txt
models/: random_forest_diabetes.pkl  random_forest_diabetes.pkl.dvc
monitoring/: README.md  metrics_logger.py  prometheus.yml
src/: predict_model copy.py  predict_model.py  predictor.py  train_model copy.py  train_model.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
(+3 files in other folders)
