[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes_predictor"
version = "0.0.1"
description = "mlops group project for diabetes predictions"
authors = [
  { name = "triple A", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["diabetes_predictor"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
exclude = ["venv", ".venv", "build", "dist"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
